Fix z-index for the keyboard

--- a/src/components/InteractivePiano.css
+++ b/src/components/InteractivePiano.css
@@ -19,7 +19,8 @@
 
 .interactive-piano__keyboard-container {
   display: flex;
-  flex: 1
+  flex: 1;
+  z-index: 1; 
 }
 
 .interactive-piano__accidental-key__wrapper {
@@ -110,6 +111,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2; 
 }
 
 .interactive-piano__octave-shift-key:first-of-type {
